# frankenredis

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENREDIS_V1.md  Cargo.toml  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_REDIS_STRUCTURE.md  FEATURE_PARITY.md  PHASE2C_EXTRACTION_PACKET.md  PLAN_TO_PORT_REDIS_TO_RUST.md  PORTING_TO_RUST_ESSENCE_EXTRACTION_LEDGER_V1.md  PROPOSED_ARCHITECTURE.md  README.md  SECURITY_COMPATIBILITY_THREAT_MATRIX_V1.md  SPEC_ALIGNMENT_WITH_FRANKENSQLITE.md  TEST_LOG_SCHEMA_V1.md  UPGRADE_LOG.md  claude-upgrade-progress.json
crates/fr-command/: Cargo.toml  build.rs
crates/fr-command/src/: lib.rs  lua_eval.rs  zadd_xx_test.rs
crates/fr-command/tests/: cluster_test.rs  float_test.rs  metamorphic_copy.rs  metamorphic_db_scope.rs  metamorphic_move.rs  metamorphic_resp3_map_shape.rs  scan_test.rs  script_debug_test.rs  test_eval_ro_keys.rs  test_lua_bugs.rs  unpack_oom.rs
crates/fr-conformance/: Cargo.toml
crates/fr-conformance/fixtures/: README.md  adversarial_corpus_v1.json  core_acl.json  core_bitmap.json  core_blocking.json  core_blocking_multi_client.json  core_client.json  core_cluster.json  core_config.json  core_connection.json  core_copy.json  core_debug.json  core_errors.json  core_expiry.json  core_function.json  core_generic.json  core_geo.json  core_hash.json  core_hyperloglog.json  core_list.json  core_migrate.json  core_module_sentinel.json  core_object.json  core_pfdebug.json  core_pubsub.json  core_replication.json  core_scan.json  core_scripting.json  core_server.json  core_set.json  core_sort.json  core_stream.json  core_strings.json  core_transaction.json  core_wait.json  core_zset.json  fr_p2c_001_eventloop_journey.json  fr_p2c_003_dispatch_journey.json  fr_p2c_004_acl_journey.json  fr_p2c_006_replication_journey.json  (+9 more)
crates/fr-conformance/src/: lib.rs  log_contract.rs  phase2c_schema.rs
crates/fr-conformance/tests/: log_contract_goldens.rs  log_contract_live.rs  script_wrapper_contract.rs  smoke.rs
crates/fr-runtime/: Cargo.toml
crates/fr-runtime/src/: lib.rs
crates/fr-runtime/tests/: admin_commands_test.rs  scan_iteration_test.rs
crates/fr-server/: Cargo.toml
crates/fr-server/src/: lib.rs  main.rs
crates/fr-server/tests/: client_kill_test.rs  fuzz_corpus_smoke.rs  tcp_e2e_test.rs
crates/fr-store/: Cargo.toml
crates/fr-store/src/: lib.rs
crates/fr-store/tests/: encoding_matrix.rs  hash_field_ttl.rs  metamorphic.rs  metamorphic_bitop.rs  metamorphic_hash_advanced.rs  metamorphic_keys.rs  metamorphic_list_advanced.rs  metamorphic_numeric.rs  metamorphic_set.rs  metamorphic_set_advanced.rs  metamorphic_string.rs  metamorphic_string_advanced.rs  metamorphic_swapdb.rs  metamorphic_zset_geo.rs  pfadd_empty.rs  randomkey_panic_test.rs  zadd_bug.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_aof_decoder/: deeply_nested_arrays  del_cmd  lpush_cmd  malformed_array_len_overflow  malformed_bulk_len_overflow  missing_crlf_after_bulk_len  multi_sequence  non_resp_prefix  sadd_cmd  truncated_array_header  truncated_bulk_body  truncated_bulk_header  xadd_cmd  zadd_cmd
fuzz/corpus/fuzz_aof_manifest_parser/: duplicate_base.manifest  duplicate_field.manifest  invalid_quoting.manifest  leading_zero_seq.manifest  missing_type.manifest  non_monotonic_incremental.manifest  path_filename.manifest  unknown_type.manifest  valid_base_history_incremental.manifest  valid_comments_blank.manifest  valid_incremental_only.manifest  valid_quoted_spaces.manifest
fuzz/corpus/fuzz_client_reply/: client_other_subcommand_mixed.txt  echo_hello_alone.txt  long_alternating_off_on.txt  lowercase_subcommand.txt  many_skips_with_intervening_commands.txt  mixed_case_subcommand.txt  mixed_case_value.txt  multiple_skips_only_one_persists.txt  nul_separator_in_stream.txt  off_command_then_on.txt  off_then_command.txt  on_off_on_cycle.txt  ping_then_echo.txt  reply_bogus_mode.txt  reply_empty_mode.txt  reply_extra_arg.txt  reply_lowercase_invalid_mode.txt  reply_no_mode_arg.txt  reply_numeric_mode.txt  reply_off_alone.txt  reply_skip_alone.txt  reply_with_two_extras.txt  skip_then_one_command.txt  skip_then_two_commands.txt  uppercase_value.txt
fuzz/corpus/fuzz_client_tracking/: tracking_bogus_mode.txt  tracking_lowercase.txt  tracking_mixed_case.txt  tracking_no_mode_arg.txt  tracking_off.txt  tracking_on_bcast.txt  tracking_on_bcast_empty_prefix.txt  tracking_on_bcast_noloop.txt  tracking_on_bcast_one_prefix.txt  tracking_on_bcast_optin_conflict.txt  tracking_on_bcast_optout_conflict.txt  tracking_on_bcast_prefix_with_colon.txt  tracking_on_bcast_three_prefixes.txt  tracking_on_bcast_two_prefixes.txt  tracking_on_noloop.txt  tracking_on_optin.txt  tracking_on_optin_noloop.txt  tracking_on_optin_optout_conflict.txt  tracking_on_optout.txt  tracking_on_optout_noloop.txt  tracking_on_plain.txt  tracking_on_prefix_missing_arg.txt  tracking_on_prefix_without_bcast.txt  tracking_on_redirect.txt  tracking_on_redirect_bcast_prefix.txt  tracking_on_redirect_missing_arg.txt  tracking_on_redirect_negative_id.txt  tracking_on_redirect_nonnumeric.txt  tracking_on_redirect_optin_noloop.txt  tracking_on_redirect_zero.txt  tracking_uppercase_prefix_value.txt
fuzz/corpus/fuzz_command_parse/: append  binary_key  client_getname  client_setname  config_get  dbsize  debug  decr  (+73 more)
fuzz/fuzz_targets/: fuzz_client_tracking.rs  fuzz_command_parse.rs  fuzz_command_parse_advanced.rs  fuzz_dump_restore.rs  fuzz_function_restore.rs  fuzz_glob_match.rs  fuzz_inline_parser.rs  fuzz_keyspace_events.rs  fuzz_lua_eval.rs  fuzz_psync_reply.rs  fuzz_rdb_encode_round_trip.rs  fuzz_rdb_structured.rs  fuzz_resp_parser.rs  fuzz_resp_roundtrip.rs  fuzz_runtime_execute_bytes.rs  fuzz_runtime_sequence.rs  fuzz_store_bitops.rs  fuzz_store_stream_groups.rs  fuzz_tls_config.rs
fuzz/scripts/: gen_client_reply_seeds.py  gen_client_tracking_seeds.py  gen_config_file_seeds.py  gen_encode_round_trip_seeds.py  gen_keyspace_events_seeds.py  gen_lua_eval_seeds.py  gen_migrate_request_seeds.py  gen_psync_reply_seeds.py  gen_runtime_execute_bytes_seeds.py  gen_tls_config_seeds.py
(+447 files in other folders)
