[package]
name = "frankenredis-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.fr-protocol]
path = "../crates/fr-protocol"

[dependencies.fr-persist]
path = "../crates/fr-persist"

[dependencies.fr-store]
path = "../crates/fr-store"

[dependencies.fr-command]
path = "../crates/fr-command"

[[bin]]
name = "fuzz_resp_parser"
path = "fuzz_targets/fuzz_resp_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_aof_decoder"
path = "fuzz_targets/fuzz_aof_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rdb_decoder"
path = "fuzz_targets/fuzz_rdb_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_resp_roundtrip"
path = "fuzz_targets/fuzz_resp_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dump_restore"
path = "fuzz_targets/fuzz_dump_restore.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_command_parse"
path = "fuzz_targets/fuzz_command_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_runtime_sequence"
path = "fuzz_targets/fuzz_runtime_sequence.rs"
test = false
doc = false
bench = false
