[package]
name = "fr-command"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
fr-store = { version = "0.1.0", path = "../fr-store" }

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
