[package]
name = "fr-conformance"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-runtime = { version = "0.1.0", path = "../fr-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
