[package]
name = "fr-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
fr-command = { version = "0.1.0", path = "../fr-command" }
fr-config = { version = "0.1.0", path = "../fr-config" }
fr-eventloop = { version = "0.1.0", path = "../fr-eventloop" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-repl = { version = "0.1.0", path = "../fr-repl" }
fr-store = { version = "0.1.0", path = "../fr-store" }
libc = "0.2.185"

[dev-dependencies]
proptest = "1"
