[package]
name = "fr-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "FrankenRedis standalone server binary"

[lib]
name = "fr_server"
path = "src/lib.rs"

[[bin]]
name = "frankenredis"
path = "src/main.rs"

[dependencies]
fr-runtime = { path = "../fr-runtime" }
fr-config = { path = "../fr-config" }
fr-protocol = { path = "../fr-protocol" }
fr-repl = { path = "../fr-repl" }
fr-persist = { path = "../fr-persist" }
fr-command = { path = "../fr-command" }
fr-eventloop = { path = "../fr-eventloop" }
mio = { version = "1.2", features = ["net", "os-poll"] }
tikv-jemallocator = { version = "0.6", optional = true }
mimalloc = { version = "0.1", optional = true }

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
