[package]
name = "fr-store"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-expire = { version = "0.1.0", path = "../fr-expire" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
libc.workspace = true

[dev-dependencies]
proptest.workspace = true
